5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1759_2101.log
== TEST (2019-05-29 18:42:34) 
-- CODE:
from numpy import*
fibo = array(eval(input("Numero de vezes:")))

d0 = 0
d1 = 1
d = 0
i = 0
vt = zeros(fibo, dtype=int)

print(vt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:34) 
-- CODE:
from numpy import*
fibo = array(eval(input("Numero de vezes:")))


d = 0
i = 0
d0 = 0
d1 = 1
vt = zeros(fibo, dtype=int)
d0 = vt[0]
d1 = vt[1]
print(vt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:56) 
-- CODE:
from numpy import*
fibo = array(eval(input("Numero de vezes:")))


d = 0
i = 0
d0 = 0
d1 = 1
vt = zeros(fibo, dtype=int)
vt[0] = 1
print(vt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:11) 
-- CODE:
from numpy import*
fibo = array(eval(input("Numero de vezes:")))


d = 0
i = 0
d0 = 0
d1 = 1
vt = zeros(fibo, dtype=int)
vt[0] = 0
vt[1] = 1
print(vt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:23) 
-- CODE:
from numpy import*
fibo = array(eval(input("Numero de vezes:")))


d = 0
i = 0
vt = zeros(fibo, dtype=int)
vt[0] = 0
vt[1] = 1

print(vt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:54:30) 
-- CODE:
from numpy import*
n= int(input("Numero de vezes: "))
i = 0
d = -2
dd = -1
x = zeros( n, dtype=int)
while (i!= size(x):)
	x[i]=x[d]+x[dd]
	x[1]=1
	i=1+i
	d=d+1
	dd=dd+1
print(x)
-- EXECUTION TIME:
0.151337
-- ERROR:
  File "/home/codebench/codes/1759/2101/main.py", line 7
    while (i!= size(x):)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:54:35) 
-- CODE:
from numpy import*
n= int(input("Numero de vezes: "))
i = 0
d = -2
dd = -1
x = zeros( n, dtype=int)
while (i!= size(x):)
	x[i]=x[d]+x[dd]
	x[1]=1
	i=1+i
	d=d+1
	dd=dd+1
print(x)
-- EXECUTION TIME:
0.12405
-- ERROR:
  File "/home/codebench/codes/1759/2101/main.py", line 7
    while (i!= size(x):)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:55:41) 
-- CODE:
from numpy import*
n= int(input("Numero de vezes: "))
i = 0
d = -2
dd = -1
x = zeros( n, dtype=int)
while (i!= size(x):)
	x[i]=x[d]+x[dd]
	x[1]=1
	i=1+i
	d=d+1
	dd=dd+1
print(x)
-- ERROR:
File "XXXX", line 7
    while (i!= size(x):)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:55:48) 
-- CODE:
from numpy import*
n= int(input("Numero de vezes: "))
i = 0
d = -2
dd = -1
x = zeros( n, dtype=int)
while (i!= size(x)):
	x[i]=x[d]+x[dd]
	x[1]=1
	i=1+i
	d=d+1
	dd=dd+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:56:48) 
-- CODE:
from numpy import*
n= int(input("Numero de vezes: "))
i = 0
d = -2
dd = -1
x = zeros( n, dtype=int)
while (i!= size(x)):
	x[i]=x[d]+x[dd]
	x[1]=1
	i=1+i
	d=d+1
	dd=dd+1
	print(x[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:03) 
-- CODE:
from numpy import*
n= int(input("Numero de vezes: "))
i = 0
d = -2
dd = -1
x = zeros( n, dtype=int)
while (i!= size(x)):
	x[i]=x[d]+x[dd]
	x[1]=1
	i=1+i
	d=d+1
	dd=dd+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:57:27) 
-- CODE:
from numpy import*
n= int(input("Numero de vezes: "))
i = 0
d = -2
dd = -1
x = zeros( n, dtype=int)
while (i!= size(x)):
	x[i]=x[d]+x[dd]
	x[1]=1
	i=1+i
	d=d+1
	dd=dd+1
print(x)
-- EXECUTION TIME:
0.524764
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
[ 0  1  1  2  3  5  8 13 21 34]
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
[ 0  1  1  2  3  5  8 13]
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
[   0    1    1    2    3    5    8   13   21   34   55   89  144  233
  377  610  987 1597]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:32) 
-- CODE:
from numpy import*
n= int(input("Numero de vezes: "))
i = 0
d = -2
dd = -1
x = zeros( n, dtype=int)
while (i!= size(x)):
	x[i]=x[d]+x[dd]
	x[1]=1
	i=1+i
	d=d+1
	dd=dd+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
